Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-54221

Ephemeral: data race with stale item stats seen in unit test

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Unknown
    • KV 2023-4

    Description

      Noted in ep_testsuite so looks genuine a data race (unlocked read) of the stale item counter?

      https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24636/console

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-54221
          # Subject Branch Project Status CR V

          Activity

            People

              owend Daniel Owen
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty